# lockerai-reranking

./: .dockerignore  .gitignore  README.md  lockerai-reranking.code-workspace  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: app-test.yaml
docker/: Dockerfile.development  compose.development.yaml
src/bert/: dataset.py  inference.py  modeling.py  quantize.py  train.py
src/bert/conf/: config.yaml
src/llama/: dataset.py  modeling.py  tain.py
src/llama/conf/: config.yaml
