[project]
name = "lockerai-reranking"
version = "0.1.0"
description = "Project on a reranking model to achieve more accurate searches that take into account the legitimacy of declarations through domain-specific reevaluation."
authors = [
  { name = "shio", email = "85730998+dino3616@users.noreply.github.com" },
]
dependencies = [
  "accelerate==1.3.0",
  "datasets==3.2.0",
  "deepspeed==0.16.2",
  "evaluate==0.4.3",
  "huggingface-hub==0.27.1",
  "hydra-core==1.3.2",
  "omegaconf==2.3.0",
  "peft==0.14.0",
  "python-dotenv==1.0.1",
  "torch==2.5.1",
  "tqdm==4.67.1",
  "transformers==4.48.0",
  "trl==0.13.0",
  "wandb==0.19.4",
]
readme = "README.md"
requires-python = "~=3.12"

[tool.rye]
managed = true
dev-dependencies = ["lefthook==1.10.0", "ruff==0.8.4"]

[tool.rye.scripts]
check = { chain = ["lint", "fmt"] }
"lint" = "ruff check ./ --diff"
"fmt" = "ruff format ./"
