[project]
name = "lockerai-reranking"
version = "0.1.0"
description = "Project on a reranking model to achieve more accurate searches that take into account the legitimacy of declarations through domain-specific reevaluation."
authors = [
  { name = "shio", email = "85730998+dino3616@users.noreply.github.com" },
]
dependencies = [
  "accelerate==1.6.0",
  "datasets==3.5.1",
  "deepspeed==0.16.7",
  "evaluate==0.4.3",
  "huggingface-hub==0.30.2",
  "hydra-core==1.3.2",
  "omegaconf==2.3.0",
  "peft==0.15.2",
  "python-dotenv==1.1.0",
  "schedulefree==1.4.1",
  "torch==2.7.0",
  "tqdm==4.67.1",
  "transformers==4.51.3",
  "trl==0.17.0",
  "wandb==0.19.10",
]
readme = "README.md"
requires-python = "~=3.11"

[tool.rye]
managed = true
dev-dependencies = ["lefthook==1.11.12", "ruff==0.11.7"]

[tool.rye.scripts]
check = { chain = ["lint", "fmt"] }
"lint" = "ruff check ./ --diff"
"fmt" = "ruff format ./"
