[project]
name = "lockerai-reranking"
version = "0.1.0"
description = "Project on a reranking model to achieve more accurate searches that take into account the legitimacy of declarations through domain-specific reevaluation."
authors = [
  { name = "shio", email = "85730998+dino3616@users.noreply.github.com" },
]
dependencies = [
  "accelerate==1.6.0",
  "evaluate==0.4.3",
  "huggingface-hub==0.30.2",
  "hydra-core==1.3.2",
  "omegaconf==2.3.0",
  "python-dotenv==1.1.0",
  "schedulefree==1.4.1",
  "scikit-learn==1.6.1",
  "torch==2.7.0",
  "torchvision==0.22.0",
  "datasets==3.6.0",
  "transformers==4.51.3",
  "wandb==0.19.10",
  "fastapi==0.115.12",
  "uvicorn==0.34.2",
]
readme = "README.md"
requires-python = "~=3.11"

[tool.rye]
managed = true
dev-dependencies = ["lefthook==1.11.12", "ruff==0.11.7"]

[tool.rye.scripts]
check = { chain = ["lint", "fmt"] }
"lint" = "ruff check ./ --diff"
"fmt" = "ruff format ./"
